updating project in new Branch

--- a/front/app/countries/[country]/style.module.css
+++ b/front/app/countries/[country]/style.module.css
@@ -1,6 +1,9 @@
 .country{
     display: flex;
     flex-direction: column;
+    width: 100%;
+    align-items: center;
+    justify-content: center;
 }
 
 .titleWrapper{
