--- a/front/components/NavLink/Navlink.module.css
+++ b/front/components/NavLink/Navlink.module.css
@@ -1,6 +1,6 @@
 .navlink{
     height: 5vh;
-    width: 7%;
+    width: 75%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -8,14 +8,35 @@
     margin: 1rem;
     text-align: center;
     padding: 4px;
-    background-color: #E54666;
     border-radius: 4px;
     box-shadow: 0 2px 0px #EDEEF0;
     transition: .3s ease-in-out;
     font-family: var(--montserrat-font), sans-serif;
+    font-weight: bold;
+    animation: animeLeft .3s ease-in-out ;
 }
 
 .navlink:hover{
     transform: translateY(-2px);
     transition: .3s ease-in-out;
+}
+
+@keyframes animeLeft {
+    0%{
+        opacity: 0;
+        transform: translateX(-1px);
+    }
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+@keyframes animeUp {
+    0%{
+        transform: translateY(-1px);
+    }
+    100%{
+        transform: translateY(0);
+    }
 }
